2008-09-06  stephan

	* xfce4-settings-editor/main.c:
	  Improve the settings-editor
	* xfce4-settings-editor/main.c,
	  xfce4-settings-editor/xfce4-settings-editor.glade:
	  Modify xfce4-settings-editor to display all channels, and their
	  properties

2008-09-06  jannis

	* po/ChangeLog, po/nl.po, po/pt_BR.po, po/xfce4-settings.pot:
	  * *.po, xfce4-settings.pot: Merge new strings.
	* ChangeLog, dialogs/keyboard-settings/main.c:
	  * dialogs/keyboard-settings/main.c: Add two new methods
	  keyboard_settings_request_confirmation() and
	  read_shortcut_property() for handling conflicts with xfwm4
	  shortcuts. Provide nice 'please choose between A and B' dialogs
	  in case we are able to resolve these conflicts via xfconf. The
	  same dialogs are also going to appear in xfwm4. n

2008-09-05  jannis

	* ChangeLog, dialogs/keyboard-settings/main.c:
	  * dialogs/keyboard-settings/main.c: Don't accept empty
	  accelerator names as shortcuts in
	  keyboard_settings_validate_shortcut(). \n

2008-09-04  jannis

	* ChangeLog, autogen.sh:
	  * autogen.sh: Fix git svn revision versioning.

2008-08-31  jannis

	* ChangeLog, dialogs/keyboard-settings/shortcut-dialog.c,
	  xfce4-settings-helper/keyboard-shortcuts.c:
	  * dialogs/keyboard-settings/shortcuts-dialog.c,
	  xfce4-settings-helper/keyboard-shortcuts.c: Add two new functions
	  called get_modifier_masks() and get_ignore_mask(). The first
	  determines to which of the Mod2-Mod5 modifiers CapsLock, NumLock
	  and ScrollLock are mapped and generates a modifier mask for them.
	  The latter combines this mask with the IGNORED_MODIFIERS mask
	  which we already used before and which includes GDK_HYPER_MASK
	  etc.. This mask is then used in several places to avoid these
	  modifiers to appear in the result of gtk_accelerator_name() and
	  to properly grab the shortcuts. This should fix bug #4304.
	* ChangeLog, dialogs/keyboard-settings/shortcut-dialog.c:
	  * dialogs/keyboard-settings/shortcut-dialog.c: Ignore