@@ -4,6 +4,10 @@
 
 2008-09-06  Jannis Pohlmann <jannis@xfce.org>
 
+	* *.po, xfce4-settings.pot: Merge new strings, remove the old ones.
+
+2008-09-06	Jannis Pohlmann <jannis@xfce.org>
+
 	* *.po, xfce4-settings.pot: Merge new strings.
 
 2008-06-25  Og Maciel <ogmaciel@gnome.org>
