@@ -1,3 +1,11 @@
+	2008-09-06	jannis
+
+	* dialogs/keyboard-settings/main.c: Add support for the
+	  'property-changed' signal of the XfconfChannel. Update shortcuts and
+	  actions whenever a property changes. Improve conflict resolving,
+	  shorten the dialog messages. 
+	* TODO: Add some notes for the final release.
+
 2008-09-06  stephan
 
 	* xfce4-settings-editor/main.c:
